# BlueTasks

./: .dockerignore  .gitignore  .jscpd.json  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  .rpgignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.complexity.mjs  eslint.e2e.config.mjs  eslint.patterns.mjs  eslint.scenario.config.mjs  eslint.tooling.config.mjs  knip.json  package-lock.json  package.json  playwright.config.ts
.github/: dependabot.yml
contract/: api-contract-validation.ts  index.ts  task-board-filter.ts
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/: a11y.md  architecture-improvement-plan.md  architecture.md  data-model.md  dependency-licenses.md  design-principles.md  desktop.md  docker.md  i18n-strategy.md  mobile-http-api-matrix.md  mobile-release-ci-plan.md  mobile-rich-notes-phase-b.md  mobile-web-parity-backlog.md  mvp-scope.md  product-brief.md  quality.md  releasing.md  rpg.md  testing-strategy.md  user-journeys.md  visual-direction.md
e2e/: a11y-axe-helpers.ts  a11y-axe.spec.ts  api-helpers.ts  api.production.spec.ts  app-shell.spec.ts  app.spec.ts  area-sidebar-filters.spec.ts  area-ui-journey.spec.ts  bluetasks.spec.ts  category-sidebar-filters.spec.ts  category-ui-journey.spec.ts  contract-expectations.ts  editor-toolbar-helpers.ts  editor-toolbar.spec.ts  helpers.ts  (+19 more)
(+300 files in other folders)
