[package]
name = "desktop"
version = "0.3.4"
description = "BlueTasks desktop (Tauri + embedded Node)"
authors = ["BlueTasks"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
